Implementacion de Java para las actividades del XML antes de validar con asteriscos que no funcionan muy bien en Registro

--- a/app/src/main/res/layout/activity_tipo_de_registro.xml
+++ b/app/src/main/res/layout/activity_tipo_de_registro.xml
@@ -50,7 +50,6 @@
             android:text="@string/soyCuidador"
             android:textColor="@android:color/black"
             android:backgroundTint="@color/crema"
-
             />
         <com.google.android.material.button.MaterialButton
             android:id="@+id/botonBuscoCuidador"
@@ -65,7 +64,6 @@
             android:text="@string/buscoCuidador"
             android:textColor="@android:color/black"
             android:backgroundTint="@color/crema"
-
             />
 
         <Button
@@ -75,7 +73,8 @@
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/principal"
             android:text="@string/registro"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
