--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,12 +20,64 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.95" />
+        app:layout_constraintGuide_percent="0.9" />
+
+    <TextView
+        android:id="@+id/Email"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:text="@string/emailTitulo"
+        android:textColor="@color/blanco"
+        android:textColorHint="#E4FFFFFF"
+        android:textColorLink="#F0FFFFFF"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/email"
+        android:layout_width="331dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="48dp"
+        android:alpha="0.9"
+        android:background="@drawable/rounded_edittext"
+        app:layout_constraintBottom_toTopOf="@+id/contraseña"
+        app:layout_constraintStart_toStartOf="@+id/guideline1" />
+
+    <TextView
+        android:id="@+id/contraseña"
+        android:layout_width="0dp"
+        android:layout_height="42dp"
+        android:layout_marginEnd="80dp"
+        android:text="@string/password"
+        android:textColor="@color/blanco"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline1"
+        tools:layout_editor_absoluteY="356dp" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/password"
+        android:layout_width="331dp"
+        android:layout_height="51dp"
+        android:background="@drawable/rounded_edittext"
+        android:backgroundTint="#F7FFFFFF"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@+id/contraseña" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/field1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintTop_margin="80dp"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintEnd_toEndOf="@id/guideline2">
 
@@ -33,8 +85,9 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/field2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/field1"
-        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:passwordToggleEnabled="true">
@@ -46,56 +99,13 @@
         android:layout_width="139dp"
         android:layout_height="36dp"
         android:layout_marginTop="548dp"
-        android:backgroundTint="#01A9BC"
-        android:text="Iniciar Sesion"
+        android:backgroundTint="@color/principal"
+        android:text="@string/iniciarSesion"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_margin="24dp"
-        app:layout_constraintTop_toBottomOf="@id/field2" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/password"
-        android:layout_width="331dp"
-        android:layout_height="51dp"
-        android:background="@drawable/rounded_edittext"
-        android:backgroundTint="#F7FFFFFF"
-        android:inputType="textPassword"
-
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="471dp" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/email"
-        android:layout_width="331dp"
-        android:layout_height="51dp"
-        android:alpha="0.9"
-        android:background="@drawable/rounded_edittext"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="349dp" />
-
-    <TextView
-        android:id="@+id/Email"
-        android:layout_width="112dp"
-        android:layout_height="35dp"
-        android:text="Email"
-        android:textColor="#E1FFFFFF"
-        android:textColorHint="#E4FFFFFF"
-        android:textColorLink="#F0FFFFFF"
-        android:textSize="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/email"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.968"
-        tools:layout_editor_absoluteX="24dp" />
-
-    <TextView
-        android:id="@+id/contraseña"
-        android:layout_width="170dp"
-        android:layout_height="42dp"
-        android:text="Contraseña"
-        android:textColor="#EBFFFFFF"
-        android:textSize="32dp"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="429dp" />
+        app:layout_constraintTop_toBottomOf="@id/field2"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
