--- a/app/src/main/res/layout/activity_tipo_de_registro.xml
+++ b/app/src/main/res/layout/activity_tipo_de_registro.xml
@@ -41,7 +41,7 @@
             android:id="@+id/botonCuidador"
             app:icon="@drawable/cuidador"
             app:iconGravity="textEnd"
-            app:iconTint="@color/black"
+            app:iconTint="@color/negro"
             app:iconPadding="58dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
             android:id="@+id/botonBuscoCuidador"
             app:icon="@drawable/buscador"
             app:iconGravity="textEnd"
-            app:iconTint="@color/black"
+            app:iconTint="@color/negro"
             app:iconPadding="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
