--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,7 +13,7 @@
         android:layout_width="313dp"
         android:layout_height="82dp"
         android:text="BIENVENIDO"
-        android:textColor="@color/color"
+        android:textColor="@color/cianClaro"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,11 +23,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.145" />
 
+
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="496dp"
+        android:layout_marginTop="424dp"
         app:layout_constraintTop_toTopOf="@+id/textView"
         app:srcCompat="@drawable/vector_1"
         tools:layout_editor_absoluteX="0dp" />
