--- a/app/src/main/res/layout/activity_tipo_de_registro.xml
+++ b/app/src/main/res/layout/activity_tipo_de_registro.xml
@@ -42,7 +42,8 @@
             app:icon="@drawable/cuidador"
             app:iconGravity="textEnd"
             app:iconTint="@color/negro"
-            app:iconPadding="58dp"
+            app:iconPadding="70dp"
+            app:iconSize="32dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -57,6 +58,7 @@
             app:iconGravity="textEnd"
             app:iconTint="@color/negro"
             app:iconPadding="50dp"
+            app:iconSize="32dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
