--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,16 +33,15 @@
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.995" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/email"
         android:layout_width="331dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="48dp"
         android:alpha="0.9"
         android:background="@drawable/rounded_edittext"
         app:layout_constraintBottom_toTopOf="@+id/contraseña"
@@ -56,22 +55,23 @@
         android:text="@string/password"
         android:textColor="@color/blanco"
         android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline1"
-        tools:layout_editor_absoluteY="356dp" />
+        app:layout_constraintStart_toStartOf="@+id/guideline1" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/password"
         android:layout_width="331dp"
         android:layout_height="51dp"
+        android:layout_marginBottom="156dp"
         android:background="@drawable/rounded_edittext"
         android:backgroundTint="#F7FFFFFF"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/button1"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/contraseña" />
+        app:layout_constraintStart_toStartOf="@id/guideline1" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/field1"
@@ -83,29 +83,17 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/field2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/field1"
-        app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:passwordToggleEnabled="true">
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/button1"
         android:layout_width="139dp"
         android:layout_height="36dp"
-        android:layout_marginTop="548dp"
+        android:layout_marginBottom="212dp"
         android:backgroundTint="@color/principal"
         android:text="@string/iniciarSesion"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintHorizontal_bias="0.48"
-        app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/field2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.347"
+        app:layout_constraintStart_toStartOf="@id/guideline1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
