correccion de los errores que me salierone n los XML de y Java

--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -43,9 +43,9 @@
             android:id="@+id/asteriscoNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
             android:gravity="center_vertical"
-            android:text="*"
+            android:text="@string/asterisco"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="gone" />
 
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/nombre"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:visibility="gone"
             />
 
@@ -68,16 +68,16 @@
             android:hint="@string/nombre"
             android:inputType="text"
             android:layout_marginBottom="4dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             />
 
         <TextView
             android:id="@+id/asteriscoApellido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
             android:gravity="center_vertical"
-            android:text="*"
+            android:text="@string/asterisco"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="gone" />
 
@@ -86,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/apellido"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:visibility="gone"/>
 
         <EditText
@@ -99,16 +99,16 @@
             android:hint="@string/apellido"
             android:inputType="text"
             android:layout_marginBottom="4dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             />
 
         <TextView
             android:id="@+id/asteriscoEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:gravity="center_vertical"
-            android:text="*"
+            android:text="@string/asterisco"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="gone" />
 
@@ -135,9 +135,9 @@
             android:id="@+id/asteriscoPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:gravity="center_vertical"
-            android:text="*"
+            android:text="@string/asterisco"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="gone" />
 
@@ -150,7 +150,7 @@
             />
 
         <EditText
-            android:id="@+id/contraseña"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:autofillHints="contraseña"
@@ -165,9 +165,9 @@
             android:id="@+id/asteriscoDireccion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:gravity="center_vertical"
-            android:text="*"
+            android:text="@string/asterisco"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="gone" />
 
@@ -194,9 +194,9 @@
             android:id="@+id/asteriscoTelefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:gravity="center_vertical"
-            android:text="*"
+            android:text="@string/asterisco"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="gone" />
 
@@ -230,9 +230,8 @@
             android:backgroundTint="@color/principal"
             android:text="@string/continua"
             android:textColor="@android:color/white"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             />
-
 
 
     </LinearLayout>
