--- a/app/src/main/res/layout/activity_tipo_de_registro.xml
+++ b/app/src/main/res/layout/activity_tipo_de_registro.xml
@@ -12,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:contentDescription="@null"
+        />
 
     <LinearLayout
         android:layout_width="305dp"
@@ -75,7 +77,7 @@
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/principal"
             android:text="@string/registro"
-            android:textColor="@android:color/white"
+            android:textColor="@color/blanco"
             />
 
     </LinearLayout>
