--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="576dp"
         app:layout_constraintTop_toTopOf="@+id/textView"
         app:srcCompat="@drawable/vector_1"
-        android:contentDescription="Imagen decorativa"
+        android:contentDescription="@string/descripcionImagen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteX="0dp" />
