--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -16,22 +16,23 @@
         android:contentDescription="@null"/>
 
     <LinearLayout
-        android:layout_width="305dp"
-        android:layout_height="624dp"
+        android:layout_width="306dp"
+        android:layout_height="677dp"
         android:layout_centerInParent="true"
+        android:background="@drawable/fondo_transparente"
         android:elevation="4dp"
         android:orientation="vertical"
         android:padding="24dp"
-        android:background="@drawable/fondo_transparente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="268dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/jaldi"
             android:gravity="center"
             android:text="@string/tituloRegistrarse"
@@ -39,68 +40,80 @@
             android:textColor="@android:color/black"
             android:textSize="50sp" />
 
-        <TextView
-            android:id="@+id/asteriscoNombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:gravity="center_vertical"
-            android:text="@string/asterisco"
-            android:textColor="@android:color/holo_red_dark"
-            android:visibility="gone" />
+        <LinearLayout
+            android:layout_width="274dp"
+            android:layout_height="65dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/invisibleNombre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/nombre"
-            android:layout_marginStart="40dp"
-            android:visibility="gone"
-            />
+            <LinearLayout
+                android:layout_width="129dp"
+                android:layout_height="65dp"
+                android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/nombre"
-            android:layout_width="185dp"
-            android:layout_height="48dp"
-            android:autofillHints="nombre"
-            android:background="@drawable/circulo_texto"
-            android:gravity="center"
-            android:hint="@string/nombre"
-            android:inputType="text"
-            android:layout_marginBottom="4dp"
-            android:layout_marginStart="40dp"
-            />
+                <TextView
+                    android:id="@+id/asteriscoNombre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="@string/asterisco"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/asteriscoApellido"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:gravity="center_vertical"
-            android:text="@string/asterisco"
-            android:textColor="@android:color/holo_red_dark"
-            android:visibility="gone" />
+                <TextView
+                    android:id="@+id/invisibleNombre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nombre"
+                    android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/invisibleApellido"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/apellido"
-            android:layout_marginStart="40dp"
-            android:visibility="gone"/>
+                <EditText
+                    android:id="@+id/nombre"
+                    android:layout_width="115dp"
+                    android:layout_height="48dp"
+                    android:autofillHints="nombre"
+                    android:background="@drawable/circulo_texto"
+                    android:gravity="center"
+                    android:hint="@string/nombre"
+                    android:inputType="text" />
 
-        <EditText
-            android:id="@+id/apellido"
-            android:layout_width="186dp"
-            android:layout_height="48dp"
-            android:autofillHints="apellido"
-            android:background="@drawable/circulo_texto"
-            android:gravity="center"
-            android:hint="@string/apellido"
-            android:inputType="text"
-            android:layout_marginBottom="4dp"
-            android:layout_marginStart="40dp"
-            />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="129dp"
+                android:layout_height="65dp"
+                android:layout_marginStart="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/invisibleApellido"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/apellido"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/asteriscoApellido"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="@string/asterisco"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:visibility="gone" />
+
+
+                <EditText
+                    android:id="@+id/apellido"
+                    android:layout_width="115dp"
+                    android:layout_height="48dp"
+                    android:layout_marginBottom="4dp"
+                    android:autofillHints="apellido"
+                    android:background="@drawable/circulo_texto"
+                    android:gravity="center"
+                    android:hint="@string/apellido"
+                    android:inputType="text" />
+            </LinearLayout>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/asteriscoEmail"
@@ -117,20 +130,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/email"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginBottom="20dp"
             android:autofillHints="emailAddress"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
             android:background="@drawable/circulo_texto"
             android:gravity="center"
-            android:layout_marginBottom="4dp"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
 
             />
+
         <TextView
             android:id="@+id/asteriscoPassword"
             android:layout_width="wrap_content"
@@ -146,21 +160,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/password"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginBottom="20dp"
             android:autofillHints="contraseña"
-            android:hint="@string/password"
-            android:inputType="textPassword"
             android:background="@drawable/circulo_texto"
             android:gravity="center"
-            android:layout_marginBottom="4dp"
+            android:hint="@string/password"
+            android:inputType="textPassword"
 
             />
+
         <TextView
             android:id="@+id/asteriscoDireccion"
             android:layout_width="wrap_content"
@@ -176,20 +190,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/direccion"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/direccion"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginBottom="20dp"
             android:autofillHints="direccion"
-            android:hint="@string/direccion"
-            android:inputType="text"
             android:background="@drawable/circulo_texto"
             android:gravity="center"
-            android:layout_marginBottom="4dp"
+            android:hint="@string/direccion"
+            android:inputType="text"
 
             />
+
         <TextView
             android:id="@+id/asteriscoTelefono"
             android:layout_width="wrap_content"
@@ -205,18 +220,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/telefono"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/telefono"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginBottom="20dp"
             android:autofillHints="telefono"
-            android:hint="@string/telefono"
-            android:inputType="number"
             android:background="@drawable/circulo_texto"
             android:gravity="center"
-            android:layout_marginBottom="4dp"
+            android:hint="@string/telefono"
+            android:inputType="number"
 
             />
 
@@ -225,13 +240,12 @@
             android:id="@+id/botonContinuar"
             android:layout_width="157dp"
             android:layout_height="wrap_content"
-            android:onClick="registrarUsuario"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/principal"
+            android:onClick="registrarUsuario"
             android:text="@string/continua"
-            android:textColor="@android:color/white"
-            android:layout_marginStart="50dp"
-            />
+            android:textColor="@android:color/white" />
 
 
     </LinearLayout>
