--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="azul_cielo">#D5E7F2</color>
     <color name="crema">#D9D9D9</color>
     <color name="negro">#FF000000</color>
+    <color name="gris">#BFD9D9D9</color>
 
 </resources>
