--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="crema">#D9D9D9</color>
     <color name="negro">#FF000000</color>
     <color name="gris">#BFD9D9D9</color>
+    <color name="texto">#BF141212</color>
 
 </resources>
