--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -61,13 +61,13 @@
 
         <ImageView
             android:id="@+id/imgPerfil"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:background="@drawable/forma_circulo"
             android:contentDescription="@string/descripcionImagen"
-            android:padding="16dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/camara" />
 
         <EditText
