--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -42,4 +42,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/menu_dibujo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/nav_menu"
+        app:labelVisibilityMode="unlabeled"
+        app:itemIconSize="40dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
