Proyecto unificado y casi listo.

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,13 +6,18 @@
     android:orientation="vertical"
     android:padding="8dp">
 
+    <ImageView
+        android:id="@+id/imgAtras"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:src="@drawable/flecha"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scrollbars="vertical" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,5 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enviar" />
+
     </LinearLayout>
 </LinearLayout>
