--- a/app/src/main/res/drawable/bg_burbuja_derecha.xml
+++ b/app/src/main/res/drawable/bg_burbuja_derecha.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#E5E5EA"/>
+    <solid android:color="#cce5ff"/>
     <corners android:radius="16dp"/>
 </shape>
