--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:background="@drawable/bg_bubble_left"
+        android:background="@drawable/bg_burbuja_izquierda"
         android:padding="10dp"
         android:textSize="16sp"
         android:maxWidth="250dp"  />
