--- a/app/src/main/res/layout/item_mensaje.xml
+++ b/app/src/main/res/layout/item_mensaje.xml
@@ -2,25 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="4dp"
+    android:id="@+id/containerMensaje">
 
-    <TextView
-        android:id="@+id/textoMensaje"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hola"
-        android:background="@drawable/fondo_transparente"
-        android:textColor="@color/negro"
-        android:padding="10dp"
-        android:textSize="16sp" />
+        android:orientation="vertical"
+        android:background="@drawable/bg_burbuja_izquierda"
+        android:padding="8dp"
+        android:id="@+id/burbujaLayout">
 
-    <TextView
-        android:id="@+id/horaMensaje"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="12:00"
-        android:textSize="12sp"
-        android:textColor="@color/texto"
-        android:layout_marginTop="4dp"/>
+        <TextView
+            android:id="@+id/textoMensaje"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mensaje"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textoHora"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="12:34"
+            android:textSize="12sp"
+            android:textColor="#888888"
+            android:layout_marginTop="4dp"
+            android:layout_gravity="end"/>
+    </LinearLayout>
 </LinearLayout>
