--- a/app/src/main/res/layout/activity_perfil_publico.xml
+++ b/app/src/main/res/layout/activity_perfil_publico.xml
@@ -39,7 +39,7 @@
                 android:contentDescription="@string/miCuenta"
                 android:onClick="atras" />
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgPerfil"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
